# apertium-ukr

./: .gitattributes  AUTHORS  Makefile.am  apertium-ukr.pc.in  apertium-ukr.post-ukr.dix  apertium-ukr.ukr.acx  apertium-ukr.ukr.dix  apertium-ukr.ukr.rlx  configure.ac  modes.xml
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
